# shinra-defense

./: README.md  overview.md
.github/workflows/: ci.yml
playbooks/: README.md  artifact_extraction.yml  honeypot_provisioning.yml  network_isolation.yml  ransomware_response.yml  system_hardening.yml
scripts/: .gitignore  README.md  deploy.sh  flake.nix  health-check.sh  rollback.sh
src-agent/: Cargo.toml  README.md  build.rs
src-agent/ebpf/: main.bpf.c  vmlinux.h
src-agent/src/: main.rs
src-engine/: .gitignore  README.md  container_manager.py  database.py  main.py  rag_engine.py  requirements.txt
src-ui/: artifacts.html  dashboard.html  ebpf-nodes.html  live-feed.html  styles.css
