[package]
name = "shinra-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.11", features = ["build_bpf"] }
aya-log = "0.2"
libc = "0.2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
regex = "1.10"
hex = "0.4"
nix = { version = "0.28", features = ["process", "signal"] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "shinra-agent"
path = "src/main.rs"

[build-dependencies]
aya-build = { version = "0.11", features = ["build_bpf"] }
